- Issue #2371: Add a Py3k warning when catching an exception that   doesn't derive from BaseException.